@@ -8,12 +8,13 @@
       <object class="GtkGrid" id="top">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="margin_left">4</property>
+        <property name="margin_right">4</property>
         <property name="column_spacing">4</property>
         <child>
           <object class="GtkGrid" id="grid3">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">4</property>
             <property name="margin_top">4</property>
             <property name="margin_bottom">4</property>
             <property name="hexpand">True</property>
@@ -67,7 +68,7 @@
           <object class="GtkGrid" id="actions-zone">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_right">4</property>
+            <property name="halign">end</property>
             <property name="row_spacing">3</property>
             <child>
               <object class="GtkBox" id="args-zone">
@@ -95,8 +96,6 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="halign">center</property>
-                    <property name="margin_left">12</property>
-                    <property name="margin_right">4</property>
                     <property name="margin_top">4</property>
                     <property name="margin_bottom">4</property>
                     <property name="row_spacing">3</property>
