@@ -35,6 +35,7 @@
    - DossierManager to DossierOpen: keep the current selection (todo #828).
    - OpeTemplates: fix load order of detail rows.
    - Settings: fix multiple loads of the dossiers (todo #833).
+   - RenderPage: set action area end-aligned (todo #855).
 
  Other changes:
 
